<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.umb.juanferreira.androidtesting.Main2Activity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:inputType="textUri"
        android:text="@string/valorIp">
        requestFocus /></EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="@string/cien" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/euros"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/euros" />

        <Button
            android:id="@+id/dolares"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dolares" />
    </LinearLayout>

    <EditText
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:enabled="false"
        android:inputType="number"
        android:text="holala" />
</LinearLayout>
